# healpix-alchemy

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-postgresql/: action.yml
.github/workflows/: build-and-test.yml  post-comment.yml  python-publish.yml  runtime_plots.py
healpix_alchemy/: __init__.py  _temporary_table.py  constants.py  func.py  healpix.py  math.py  point.py  types.py  unit_spherical.py  util.py
healpix_alchemy/tests/: conftest.py  test_math.py  test_point.py  test_regions.py  test_types.py  test_unit_spherical.py  test_util.py
healpix_alchemy/tests/benchmarks/: conftest.py  data.py  models.py  test_benchmarks.py
tests/: test_types.py
tests/benchmarks/: conftest.py  data.py  models.py  test_benchmarks.py
