[tool.poetry]
name = "healpix-alchemy"
version = "1.0.1"
description = "SQLAlchemy extensions for HEALPix spatially indexed astronomy data"
readme = "README.md"
authors = ["Leo Singer <leo.singer@ligo.org>"]
license = "BSD-3-clause"
repository = "https://github.com/skyportal/healpix-alchemy"
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Astronomy"
]

[tool.poetry.dependencies]
python = "^3.7"
astropy = "*"
astropy_healpix = "*"
mocpy = ">=0.10.0"
sqlalchemy = ">=1.4"

[tool.poetry.dev-dependencies]
astroquery = "*"
numpy = "*"
pandas = "*"
psycopg2-binary = "*"
pytest = "*"
pytest-benchmark = "*"
pytest-doctestplus = "*"
pytest-postgresql = "<4.0.0"  # pytest-postgresql 4.0.0 uses psycopg3, but sqlalchemy does not yet support it

[tool.pytest.ini_options]
addopts = "--doctest-glob *.md"
doctest_plus = true
doctest_optionflags = [
    "FLOAT_CMP"
]
filterwarnings = [
    "error::sqlalchemy.exc.SAWarning",
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning"
]

[tool.coverage.run]
omit = [
    "*/conftest.py",
    "*/tests/*"
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
