[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "healpix-alchemy"
description = "SQLAlchemy extensions for HEALPix spatially indexed astronomy data"
readme = "README.md"
authors = [ { name = "Leo Singer", email = "leo.p.singer@nasa.gov" } ]
license = "BSD-3-clause"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "astropy",
    "astropy_healpix",
    "mocpy>=0.12.2",
    "sqlalchemy>=1.4",
]
requires-python = ">=3.11"
dynamic = ["version"]

[project.urls]
source = "https://github.com/skyportal/healpix-alchemy"

[dependency-groups]
test = [
    "astroquery",
    "numpy",
    "pandas",
    "psycopg[binary]",
    "pytest",
    "pytest-benchmark",
    "pytest-cov~=5.0.0",
    "pytest-doctestplus",
    "pytest-postgresql>=4.0.0",
]

[tool.pytest.ini_options]
addopts = "--doctest-glob *.md"
doctest_plus = true
doctest_optionflags = [
    "ELLIPSIS",
    "FLOAT_CMP"
]
filterwarnings = [
    "error::sqlalchemy.exc.SAWarning",
    "error::DeprecationWarning",
    "error::PendingDeprecationWarning"
]

[tool.coverage.run]
omit = [
    "*/conftest.py",
    "*/tests/*"
]

[tool.setuptools_scm]
